--- a/examples/css/style.css
+++ b/examples/css/style.css
@@ -1,8 +1,9 @@
 body {
-	font-family: Monospace;
+	font-family: 'Segoe UI', 'Avenir Next', sans-serif;
 	background-color: #f0f0f0;
 	margin: 0px;
 	overflow: hidden;
+	font-size: 12px;
 }
 canvas.main {
 	width: 100%;
@@ -12,3 +13,38 @@ canvas.main {
 	position: fixed;
 	left: 0; top: 0;
 }
+
+.error-popup {
+	position: fixed;
+	left: 50%; top: 50%;
+	width: 50%;
+	min-width: 280px;
+	transform: translate(-50%, -50%);
+	z-index: 100;
+	background: white;
+	border-top: 10px solid #ffafaf;
+	padding: 10px;
+	padding-top: 0;
+	box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.2), 
+		0px 2px 7px 0px rgba(0,0,0,0.1),
+		0px 4px 15px 0px rgba(0,0,0,0.1);
+}
+
+.error-popup h2 {
+	color: #333;
+	-webkit-font-smoothing: antialiased;
+}
+
+.error-popup pre {
+	max-height: 300px;
+	overflow: auto;
+	background: #fafafa;
+	padding: 5px;
+}
+
+a {
+	color: #5f5fff;
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
