--- a/example-assets/css/style.css
+++ b/example-assets/css/style.css
@@ -1,25 +1,51 @@
 body {
-	font-family: 'Segoe UI', 'Avenir Next', sans-serif;
-	background-color: #f0f0f0;
-	margin: 0px;
 	overflow: hidden;
-	font-size: 12px;
+}
+#content {
+	padding-right: 0;
+}
+footer {
+	position: absolute;
+	bottom: 0;
+	left: 30px;
+	font-size: 80%;
+	color: rgba(255, 255, 255, 0.5);
+}
+footer hr {
+	display: none;
+}
+@media (max-width: 767px) {
+	#content {
+		padding-left: 0;
+		position: fixed;
+		left: 0; right: 0;
+		top: 55px; bottom:;
+	}
+	footer {
+		position: fixed;
+		left: 10px;
+	}
+	#stats {
+		top: 55px !important;
+	}
+}
+#example-wrapper {
+	position: relative;
+	height: 100%;
 }
 canvas.main {
-	width: 100%;
-	height: 100%;
+	width: 100%; height: 100%;
 }
 #stats {
 	position: fixed;
-	left: 0; top: 0;
+	right: 0; top: 0;
 }
 
 .error-popup {
 	position: fixed;
-	left: 50%; top: 50%;
+	right: 50px; bottom: 50px;
 	width: 50%;
 	min-width: 280px;
-	transform: translate(-50%, -50%);
 	z-index: 100;
 	background: white;
 	border-top: 10px solid #ffafaf;
@@ -54,6 +80,6 @@ img.logo-hyper3d {
 	position: fixed;
 	right: 20px; bottom: 20px;
 	width: 120px;
-	max-width: 40%;
+	max-width: 20%;
 	opacity: 0.3;
 }
