--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <!-- sidebar.html -->
 <header class="sidebar-header" role="banner">
 	<h3 class="title">
-		<a href="{{ site.BASE_PATH }}/">
-			<img src="{{ site.BASE_PATH }}/assets/media/logo.svg" class="sidebar-logo" alt="{{ site.title }}" />
+		<a href="{{ site.baseurl }}/">
+			<img src="{{ site.baseurl }}/assets/media/logo.svg" class="sidebar-logo" alt="{{ site.title }}" />
 		</a>
     </h3>
 </header>
@@ -62,7 +62,7 @@
 		</li>
 		{% endif %}
 		<li>
-			<a class="btn btn-default btn-sm" href="{{ site.BASE_PATH }}/{{ site.rss_path }}">
+			<a class="btn btn-default btn-sm" href="{{ site.baseurl }}/{{ site.rss_path }}">
 				<i class="fa fa-rss fa-lg"></i>
 			</a>
 		</li>
