--- a/example-assets/css/style.sass
+++ b/example-assets/css/style.sass
@@ -31,6 +31,18 @@ body
         width: 100%
         height: 100%
 
+    div.info
+        position: absolute
+        left: 0
+        top: 0
+        width: 100%
+        box-sizing: border-box
+        padding: 5px 80px 0 5px
+        color: rgba(255, 255, 255, 0.5)
+        font-size: 80%
+        white-space: pre
+        text-shadow: 0px 0px 12px black
+
 footer
     position: absolute
     bottom: 0
